--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "infobip/infobip-api-php-client",
+  "name": "caherrera/infobip-api-php-client",
   "description": "Infobip SMS library for PHP",
   "version": "2.5.0",
   "keywords": [
@@ -12,17 +12,17 @@
   "homepage": "http://dev.infobip.com",
   "authors": [
     {
-      "name": "",
-      "email": "libraries@infobip.com"
+      "name": "Carlos Herrera",
+      "email": "caherrera@gmail.com"
     }
   ],
-  "support": {
-    "email": "support@infobip.com"
-  },
   "license": "Apache-2.0",
   "minimum-stability": "dev",
   "require": {
     "netresearch/jsonmapper": "3.1.1"
+  },
+  "replace": {
+    "infobip/infobip-api-php-client": "2.5.0"
   },
   "autoload": {
     "psr-4": {
