--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "name": "caherrera/infobip-api-php-client",
   "description": "Infobip SMS library for PHP",
-  "version": "2.5.0",
+  "version": "2.5.1",
   "keywords": [
     "infobip",
     "sms",
@@ -22,7 +22,7 @@
     "netresearch/jsonmapper": "3.1.1"
   },
   "replace": {
-    "infobip/infobip-api-php-client": "2.5.0"
+    "infobip/infobip-api-php-client": "^2.5.0"
   },
   "autoload": {
     "psr-4": {
